BearLibTerminal.h

#define TK_COLOR            0xC4 /* Current foregroung color */
#define TK_BKCOLOR          0xC5 /* Current background color */
#define TK_LAYER            0xC6 /* Current layer */
#define TK_COMPOSITION      0xC7 /* Current composition state */

/*
 * Generic mode enum.
 * Right now it is used for composition option only.
 */
#define TK_OFF                 0
#define TK_ON                  1

/*
 * Text printing alignment.
 */
#define TK_ALIGN_DEFAULT       0

/*
 * Terminal uses unsigned 32-bit value for color representation in ARGB order (0xAARRGGBB), e. g.
 * a) solid red is 0xFFFF0000
 * b) half-transparent green is 0x8000FF00
 */
typedef uint32_t color_t;


typedef struct dimensions_t_
{
	int width;
	int height;
}
dimensions_t;

TERMINAL_API int terminal_open();

TERMINAL_API void terminal_close();

TERMINAL_API int terminal_set8(const int8_t* value);

TERMINAL_API void terminal_refresh();

TERMINAL_API void terminal_clear();

TERMINAL_API void terminal_clear_area(int x, int y, int w, int h);

TERMINAL_API void terminal_crop(int x, int y, int w, int h);

TERMINAL_API void terminal_layer(int index);

TERMINAL_API void terminal_color(color_t color);

TERMINAL_API void terminal_bkcolor(color_t color);

TERMINAL_API void terminal_composition(int mode);

TERMINAL_API void terminal_put(int x, int y, int code);

TERMINAL_API void terminal_put_ext(int x, int y, int dx, int dy, int code, color_t* corners);

TERMINAL_API int terminal_pick(int x, int y, int index);

TERMINAL_API color_t terminal_pick_color(int x, int y, int index);

TERMINAL_API color_t terminal_pick_bkcolor(int x, int y);

TERMINAL_API void terminal_print_ext8(int x, int y, int w, int h, int align, const int8_t* s, int* out_w, int* out_h);

TERMINAL_API void terminal_measure_ext8(int w, int h, const int8_t* s, int* out_w, int* out_h);

TERMINAL_API int terminal_has_input();

TERMINAL_API int terminal_state(int code);

TERMINAL_API int terminal_read();

TERMINAL_API int terminal_read_str8(int x, int y, int8_t* buffer, int max);

TERMINAL_API int terminal_peek();

TERMINAL_API void terminal_delay(int period);

TERMINAL_API const int8_t* terminal_get8(const int8_t* key, const int8_t* default_);

TERMINAL_API color_t color_from_name8(const int8_t* name);


TERMINAL_INLINE void terminal_color(const char* name)
{
	terminal_color(color_from_name(name));
}


TERMINAL_INLINE void terminal_color(const wchar_t* name)
{
	terminal_color(color_from_wname(name));
}


TERMINAL_INLINE void terminal_bkcolor(const char* name)
{
	terminal_bkcolor(color_from_name(name));
}


TERMINAL_INLINE void terminal_bkcolor(const wchar_t* name)
{
	terminal_bkcolor(color_from_wname(name));
}


TERMINAL_INLINE void terminal_put_ext(int x, int y, int dx, int dy, int code)
{
	terminal_put_ext(x, y, dx, dy, code, 0);
}


TERMINAL_INLINE int terminal_pick(int x, int y)
{
	return terminal_pick(x, y, 0);
}


TERMINAL_INLINE color_t terminal_pick_color(int x, int y)
{
	return terminal_pick_color(x, y, 0);
}